[package]
name = "pcx_board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ppl_engine = { path = "../PPLEngine" }
icy_engine = { path = "../icy_engine" }
substring = "1.4.5"
regex = "1.5.5"
rand = "0.8"