[package]
name = "pcx_board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ppl_engine = { path = "../PPLEngine" }
icy_engine = { path = "../icy_engine" }
substring = "1.4.5"
regex = "1.10.3"
rand = "0.8"
easy_reader = "0.5.2"
thiserror = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
byteorder = "1.5.0"
log = "0.4.21"
log4rs = "1.2.0"
